@startuml

title __FRAG_CHART's Class Diagram__\n

  namespace com.example.csufttally {
    namespace frag_chart {
      abstract class com.example.csufttally.frag_chart.BaseChartFragment {
          + month : int
          + year : int
          ~ barChart : BarChart
          ~ chartLv : ListView
          ~ chartTv : TextView
          ~ mDatas : List<ChartItemBean>
          ~ pieChart : PieChart
          + loadData()
          + onCreateView()
          + setDate()
          # addLvHeaderView()
          # setAxis()
          {abstract} # setAxisData()
          {abstract} # setPieData()
          {abstract} # setYAxis()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace frag_chart {
      class com.example.csufttally.frag_chart.IncomeChartFragment {
          ~ kind : int
          + onResume()
          + setDate()
          # setAxisData()
          # setPieData()
          # setYAxis()
      }
    }
  }
  

  namespace com.example.csufttally {
    namespace frag_chart {
      class com.example.csufttally.frag_chart.OutcomeChartFragment {
          ~ kind : int
          + onResume()
          + setDate()
          # setAxisData()
          # setPieData()
          # setYAxis()
      }
    }
  }
  

  com.example.csufttally.frag_chart.BaseChartFragment -up-|> androidx.fragment.app.Fragment
  com.example.csufttally.frag_chart.BaseChartFragment o-- com.example.csufttally.adapter.ChartItemAdapter : itemAdapter
  com.example.csufttally.frag_chart.IncomeChartFragment -up-|> com.example.csufttally.frag_chart.BaseChartFragment
  com.example.csufttally.frag_chart.OutcomeChartFragment -up-|> com.example.csufttally.frag_chart.BaseChartFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
